# opencl_examples

vector_add/: CMakeLists.txt  vector_add.cpp
